--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,9 @@
-name: IClinic Backend Production CI
+name: Run Tests Rover
 
 on:
   pull_request:
     branches:
       - main
-
-
 jobs:
   build:
     env:
@@ -17,7 +15,6 @@ jobs:
       max-parallel: 4
       matrix:
         python-version: [ 3.9 ]
-
 
     steps:
       - uses: actions/checkout@v2
