--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,11 @@ jobs:
 
       - name: Test with pytest
         run: |
+          pytest . 
+
+
+      - name: Test with pytest Coverage
+        run: |
           pytest . --cov=.
 
 
