--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,11 +29,11 @@ jobs:
 
       - name: Test with pytest
         run: |
-          pytest . 
+           python -m pytest testes/
 
 
       - name: Test with pytest Coverage
         run: |
-          pytest . --cov=.
+           python -m pytest testes/ --cov=.
 
 
